// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TooltipIcon should allow the user to specify the direction 1`] = `
<TooltipIcon
  align="center"
  className="custom-class"
  direction="top"
  tooltipText="tooltip text"
>
  <button
    aria-describedby="icon-tooltip-4"
    className="cds--tooltip__trigger cds--tooltip--a11y custom-class cds--tooltip--top cds--tooltip--align-center"
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    type="button"
  >
    <span
      className="cds--assistive-text"
      id="icon-tooltip-4"
      onMouseEnter={[Function]}
    >
      tooltip text
    </span>
    <svg />
  </button>
</TooltipIcon>
`;

exports[`TooltipIcon should render 1`] = `
<TooltipIcon
  align="center"
  className="custom-class"
  direction="bottom"
  tooltipText="tooltip text"
>
  <button
    aria-describedby="icon-tooltip-1"
    className="cds--tooltip__trigger cds--tooltip--a11y custom-class cds--tooltip--bottom cds--tooltip--align-center"
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    type="button"
  >
    <span
      className="cds--assistive-text"
      id="icon-tooltip-1"
      onMouseEnter={[Function]}
    >
      tooltip text
    </span>
    <svg />
  </button>
</TooltipIcon>
`;
